<resources>
    <string name="app_name">GOST edu</string>
    <string name="qua_name">Генерация вопросов</string>
    <string name="file_name">Документ по стандарту</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dashboard">Дашборд</string>
    <string name="dashboard_subtitle">Что будем делать сегодня?</string>
    <string name="dashboard_subtitle_2">Я могу отформатировать твой текстовый документ по ГОСТу, предсказать вопросы, которые могут задать на выступлении, и найти для него релевантные источники</string>
    <string name="dashboard_questions_button">Предсказать вопросы</string>
    <string name="dashboard_format_file_button">Форматировать файл [в разработке]</string>
    <string name="dashboard_find_references_button">Найти источники</string>
    <string name="topic">Тема</string>
    <string name="description">Описание [в разработке]</string>
    <string name="start_date">Дата начала</string>
    <string name="end_date">Дата конца</string>
    <string name="reference_seeker_places_subtitle">Где будем искать?</string>
    <string name="books">Книги</string>
    <string name="articles">Статьи</string>
    <string name="websites">Сайты</string>
    <string name="reference_seeker_author_subtitle">И что насчёт автора? [в разработке]</string>
    <string name="author_is_present">Есть</string>
    <string name="author_is_not_present">Нет</string>
    <string name="additional_criteria_hint">Дополнительные критерии (необязательно)</string>
    <string name="reference_seeker_launch_button_text">Запустить поиск</string>
    <string name="qua_format_add_file_button_pdf">Загрузить файл работы PDF</string>
    <string name="qua_format_add_file_button_word">Загрузить файл работы WORD\n[в разработке]</string>
    <string name="qua_format_add_file_button_pptx">Загрузить файл работы PPTX\n[в разработке]</string>
    <string name="qua_format_add_filу_done">Файл добавлен</string>
    <string name="qua_format_file_text">Загрузите файл/файлы вашей работы:</string>
    <string name="qua_theme_enter_text">Тема работы</string>
    <string name="qua_count_enter_text">Количество вопросов (10 максимум)</string>
    <string name="generate_button_text">Генерировать</string>
    <string name="file_is_ready">Твой файл готов.\nХорошей защиты!</string>
    <string name="result_is_ready">Твой запрос готов.\nХорошей защиты!</string>
    <string name="download">Скачать</string>
    <string name="copy">Копировать текст</string>
    <string name="result">Результат</string>
    <string name="file_loading">Загружаем твой файл…</string>
    <string name="result_loading">Загружаем твой запрос…</string>
    <string name="file_description_enter_text">Описание форматирования</string>
    <string name="go_home">На главный экран</string>
    <string name="text_to_copy">Копируемый текст</string>
    <string name="gosty_with_hearts">Гости, вокруг которого летают сердечки</string>
    <string name="check_mark">Галочка</string>
</resources>