<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/dashboard_fragment">

    <fragment
        android:id="@+id/dashboard_fragment"
        android:name="io.ioi.oio.ui.DashboardFragment"
        android:label="@string/dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/question_predictor_fragment"
        android:name="io.ioi.oio.ui.QuestionPredictorFragment"
        android:label="@string/dashboard_questions_button"
        tools:layout="@layout/fragment_question_predictor" />

    <fragment
        android:id="@+id/reference_seeker_fragment"
        android:name="io.ioi.oio.ui.ReferenceSeekerFragment"
        android:label="@string/dashboard_find_references_button"
        tools:layout="@layout/fragment_reference_seeker" />

    <fragment
        android:id="@+id/file_check_fragment"
        android:name="io.ioi.oio.ui.FileCheckerFragment"
        android:label="@string/dashboard_format_file_button"
        tools:layout="@layout/fragment_file_checker" />

    <fragment
        android:id="@+id/file_download_fragment"
        android:name="io.ioi.oio.ui.FileDownloadFragment"
        android:label="@string/download"
        tools:layout="@layout/fragment_file_download" />

    <fragment
        android:id="@+id/get_result_fragment"
        android:name="io.ioi.oio.ui.GetResultFragment"
        android:label="@string/result"
        tools:layout="@layout/fragment_get_result" />

</navigation>