<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ReferenceSeekerFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:liftOnScroll="false">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            style="?attr/collapsingToolbarLayoutMediumStyle"
            android:layout_width="match_parent"
            android:layout_height="?attr/collapsingToolbarLayoutMediumSize"
            app:collapsedTitleTextAppearance="?textAppearanceTitleLarge"
            app:collapsedTitleTextColor="?attr/colorOnSurface"
            app:contentScrim="@android:color/transparent"
            app:expandedTitleMarginStart="24dp"
            app:expandedTitleTextAppearance="?textAppearanceHeadlineLarge"
            app:expandedTitleTextColor="?attr/colorOnSurface"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
            app:title="@string/dashboard_find_references_button"
            app:titleCollapseMode="scale">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/topAppBar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:elevation="0dp"
                android:paddingStart="6dp"
                android:paddingEnd="8dp"
                app:layout_collapseMode="pin"
                app:navigationIcon="@null" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="24dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/topic_text_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/topic"
                android:labelFor="@id/edit_topic"
                app:boxCornerRadiusBottomEnd="12dp"
                app:boxCornerRadiusBottomStart="12dp"
                app:boxCornerRadiusTopEnd="12dp"
                app:boxCornerRadiusTopStart="12dp">

                <!--this is the actual edit text which takes the input-->
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_topic"
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:inputType="text"
                    android:minHeight="48dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/description_text_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/description"
                android:labelFor="@id/edit_description"
                app:boxCornerRadiusBottomEnd="12dp"
                app:boxCornerRadiusBottomStart="12dp"
                app:boxCornerRadiusTopEnd="12dp"
                app:boxCornerRadiusTopStart="12dp"
                android:alpha="0.5">

                <!--this is the actual edit text which takes the input-->
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_description"
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:inputType="text"
                    android:minHeight="48dp"
                    android:enabled="false" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="14dp">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/pick_start_date_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/start_date"
                    app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.ExtraLarge" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="0.05"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/pick_end_date_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/end_date"
                    app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.ExtraLarge" />

            </LinearLayout>

            <TextView
                android:id="@+id/subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginHorizontal="4dp"
                android:layout_marginVertical="10dp"
                android:fontFamily="sans-serif"
                android:paddingVertical="10dp"
                android:text="@string/reference_seeker_places_subtitle"
                android:textAlignment="viewStart"
                android:textSize="20sp" />

            <RadioGroup
                android:id="@+id/places_radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/books_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:padding="4dp"
                    android:text="@string/books"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/articles_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:padding="4dp"
                    android:text="@string/articles"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/websites_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:padding="4dp"
                    android:text="@string/websites"
                    android:textSize="16sp" />

            </RadioGroup>

            <TextView
                android:id="@+id/author_subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginHorizontal="4dp"
                android:layout_marginVertical="10dp"
                android:fontFamily="sans-serif"
                android:paddingVertical="10dp"
                android:text="@string/reference_seeker_author_subtitle"
                android:textAlignment="viewStart"
                android:textSize="20sp"
                android:enabled="false"
                android:alpha="0.5" />

            <RadioGroup
                android:id="@+id/author_radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:alpha="0.5">

                <RadioButton
                    android:id="@+id/author_is_present_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:padding="4dp"
                    android:text="@string/author_is_present"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/author_is_not_present_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:padding="4dp"
                    android:text="@string/author_is_not_present"
                    android:textSize="16sp" />

            </RadioGroup>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/additional_criteria_text_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/additional_criteria_hint"
                android:labelFor="@id/edit_additional_criteria"
                app:boxCornerRadiusBottomEnd="12dp"
                app:boxCornerRadiusBottomStart="12dp"
                app:boxCornerRadiusTopEnd="12dp"
                app:boxCornerRadiusTopStart="12dp"
                android:enabled="false"
                android:alpha="0.5">

                <!--this is the actual edit text which takes the input-->
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_additional_criteria"
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:inputType="text"
                    android:minHeight="48dp"
                    android:enabled="false" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/reference_seeker_launch_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginVertical="16dp"
                    android:paddingVertical="24dp"
                    app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.ExtraLarge"
                    android:text="@string/reference_seeker_launch_button_text"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.progressindicator.CircularProgressIndicator
                    android:id="@+id/prediction_progress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="invisible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:visibility="visible"
                    tools:progress="75" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>