<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".ui.FileCheckerFragment">

<com.google.android.material.appbar.AppBarLayout
    android:id="@+id/app_bar_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:liftOnScroll="false">

    <com.google.android.material.appbar.CollapsingToolbarLayout
        android:id="@+id/collapsing_toolbar"
        style="?attr/collapsingToolbarLayoutMediumStyle"
        android:layout_width="match_parent"
        android:layout_height="?attr/collapsingToolbarLayoutMediumSize"
        app:collapsedTitleTextAppearance="?textAppearanceTitleLarge"
        app:collapsedTitleTextColor="?attr/colorOnSurface"
        app:contentScrim="@android:color/transparent"
        app:expandedTitleMarginStart="24dp"
        app:expandedTitleTextAppearance="?textAppearanceHeadlineLarge"
        app:expandedTitleTextColor="?attr/colorOnSurface"
        app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
        app:title="@string/file_name"
        app:titleCollapseMode="scale">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:elevation="0dp"
            android:paddingStart="6dp"
            android:paddingEnd="8dp"
            app:layout_collapseMode="pin"
            app:navigationIcon="null" />

    </com.google.android.material.appbar.CollapsingToolbarLayout>
</com.google.android.material.appbar.AppBarLayout>

<androidx.core.widget.NestedScrollView
    android:id="@+id/nested_scrollview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginHorizontal="24dp">


        <com.google.android.material.button.MaterialButton
            android:id="@+id/add_file_button_word"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/add_pic"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            app:strokeColor="@color/purple"
            android:paddingVertical="24dp"
            android:text="@string/qua_format_add_file_button_word"
            app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.ExtraLarge" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/add_file_button_word_ready"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/baseline_check_24"
            android:backgroundTint="@color/green"
            android:paddingVertical="24dp"
            android:text="@string/qua_format_add_filу_done"
            android:visibility="gone"
            app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.ExtraLarge" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/topic_text_field_qua"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/file_description_enter_text"
            android:labelFor="@id/edit_topic_qua"
            app:boxCornerRadiusBottomEnd="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusTopEnd="12dp"
            app:boxCornerRadiusTopStart="12dp">

            <!--this is the actual edit text which takes the input-->
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_topic_qua"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:inputType="text"
                android:minHeight="48dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/format_file_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="24dp"
            android:paddingVertical="16dp"
            android:text="@string/generate_button_text"
            app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.ExtraLarge" />



    </LinearLayout>

</androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>