<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.DashboardFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:liftOnScroll="false">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            style="?attr/collapsingToolbarLayoutMediumStyle"
            android:layout_width="match_parent"
            android:layout_height="?attr/collapsingToolbarLayoutMediumSize"
            app:collapsedTitleTextAppearance="?textAppearanceTitleLarge"
            app:collapsedTitleTextColor="?attr/colorOnSurface"
            app:contentScrim="@android:color/transparent"
            app:expandedTitleMarginStart="24dp"
            app:expandedTitleTextAppearance="?textAppearanceHeadlineLarge"
            app:expandedTitleTextColor="?attr/colorOnSurface"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
            app:title="@string/app_name"
            app:titleCollapseMode="scale">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/topAppBar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:elevation="0dp"
                android:paddingStart="6dp"
                android:paddingEnd="8dp"
                app:layout_collapseMode="pin"
                app:navigationIcon="@null" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="24dp"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="24dp"
                android:paddingVertical="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="12dp">

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.3"
                        android:adjustViewBounds="true"
                        android:src="@drawable/ghost_hearts_3_" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/subtitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="start"
                            android:layout_marginHorizontal="4dp"
                            android:fontFamily="sans-serif-medium"
                            android:text="@string/dashboard_subtitle"
                            android:textAlignment="viewStart"
                            android:textSize="22sp" />

                        <TextView
                            android:id="@+id/subtitle_2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="start"
                            android:layout_marginHorizontal="4dp"
                            android:fontFamily="sans-serif"
                            android:paddingTop="12dp"
                            android:text="@string/dashboard_subtitle_2"
                            android:textAlignment="viewStart"
                            android:textSize="16sp" />

                    </LinearLayout>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/format_file_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="24dp"
                android:text="@string/dashboard_format_file_button"
                app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.ExtraLarge" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/questions_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="24dp"
                android:text="@string/dashboard_questions_button"
                app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.ExtraLarge" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/find_references_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="24dp"
                android:text="@string/dashboard_find_references_button"
                app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.ExtraLarge" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>