<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.FileDownloadFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:liftOnScroll="false">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            style="?attr/collapsingToolbarLayoutMediumStyle"
            android:layout_width="match_parent"
            android:layout_height="?attr/collapsingToolbarLayoutMediumSize"
            app:collapsedTitleTextAppearance="?textAppearanceTitleLarge"
            app:collapsedTitleTextColor="?attr/colorOnSurface"
            app:contentScrim="@android:color/transparent"
            app:expandedTitleMarginStart="24dp"
            app:expandedTitleTextAppearance="?textAppearanceHeadlineLarge"
            app:expandedTitleTextColor="?attr/colorOnSurface"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
            app:title="@string/download"
            app:titleCollapseMode="scale">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/topAppBar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:elevation="0dp"
                android:paddingStart="6dp"
                android:paddingEnd="8dp"
                app:layout_collapseMode="pin"
                app:navigationIcon="?attr/homeAsUpIndicator" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="24dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ready_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="gone">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:contentDescription="@string/check_mark"
                    android:minWidth="120dp"
                    android:minHeight="120dp"
                    android:paddingHorizontal="16dp"
                    android:paddingTop="8dp"
                    android:src="@drawable/baseline_check_24" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="14dp"
                    android:gravity="center"
                    android:paddingVertical="5dp"
                    android:text="@string/file_is_ready"
                    android:textSize="22sp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/questions_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:paddingVertical="24dp"
                    android:text="@string/download"
                    android:textSize="18sp"
                    app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.ExtraLarge" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/go_home_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp"
                    android:paddingVertical="24dp"
                    android:text="@string/go_home"
                    android:textSize="18sp"
                    app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.ExtraLarge" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/placeholder_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ProgressBar
                    android:id="@+id/progress_loader"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="16dp"
                    android:indeterminateTint="@color/purple"
                    android:minWidth="90dp"
                    android:minHeight="90dp"
                    android:visibility="visible" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="14dp"
                    android:gravity="center"
                    android:paddingVertical="5dp"
                    android:text="@string/file_loading"
                    android:textSize="22sp" />

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>